Fix alignment not re-rendering

--- a/src/components/alignment-matrix/styles.scss
+++ b/src/components/alignment-matrix/styles.scss
@@ -2,6 +2,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	&-buttons {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 8px;
+	}
 }
 
 .gb-matrix {
@@ -26,15 +32,15 @@
 
 	&-cell {
 		display: flex;
-		width: 32px;
-		height: 32px;
+		width: 40px;
+		height: 40px;
 		align-items: center;
 		justify-content: center;
 		cursor: pointer;
 
 		&-state {
-			height: 10px;
-			width: 10px;
+			height: 12px;
+			width: 12px;
 			background: currentColor;
 			transition: all 120ms linear 0s;
 		}
